corrcted minor issues with pictures separators and fixed overflowing of the video container

--- a/sass/blocks/gallery/_gallery.scss
+++ b/sass/blocks/gallery/_gallery.scss
@@ -1,14 +1,7 @@
 .gallery {
-  &__item {
-    &::after {
-      content: "";
-      display: block;
-      border-top: 1px solid $form-divider;
-    }
-  }
-
   &__inner {
     padding: 2.2rem 6.25% 1.7rem;
+    border-top: 1px solid #e5e5e5;
   }
 
   &__caption {
